<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_select_hub_place_guide_process_first"
        style="@style/TextAppearance.Title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_hub_process_first"
        android:textColor="@color/Gray900"
        android:layout_marginStart="@dimen/spacing4"
        android:layout_marginTop="@dimen/spacing9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_select_hub_place_guide_process_all"
        style="@style/TextAppearance.SubTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_hub_process_all"
        android:textColor="@color/Gray300"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@id/tv_select_hub_place_guide_process_first"
        app:layout_constraintTop_toTopOf="@id/tv_select_hub_place_guide_process_first"
        app:layout_constraintBottom_toBottomOf="@id/tv_select_hub_place_guide_process_first" />

    <TextView
        android:id="@+id/tv_select_hub_place_guide_title"
        style="@style/TextAppearance.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing4"
        android:layout_marginTop="@dimen/spacing3"
        android:text="@string/add_select_hub_place_title"
        android:textColor="@color/Gray800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_hub_place_guide_process_first" />

    <TextView
        android:id="@+id/tv_select_hub_place_guide_desc"
        style="@style/TextAppearance.SubTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing3"
        android:text="@string/add_select_hub_place_desc1"
        android:textColor="@color/Gray800"
        android:layout_marginStart="@dimen/spacing4"
        android:layout_marginEnd="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_hub_place_guide_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_hub_place_guide_tooltip"
        style="@style/Theme.ElderCare.Button.Add.Device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommend_place_tooltip_title"
        android:textAppearance="@style/TextAppearance.Body3"
        android:drawableEnd="@drawable/ic_show_tooltip_20dp"
        android:drawablePadding="@dimen/spacing2"
        android:paddingStart="@dimen/spacing4"
        android:paddingEnd="@dimen/spacing4"
        android:paddingVertical="@dimen/spacing2"
        android:layout_marginTop="@dimen/spacing8"
        app:layout_constraintStart_toStartOf="@+id/tv_select_hub_place_guide_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_hub_place_guide_desc" />

    <ImageView
        android:id="@+id/tv_select_hub_place_guide_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_install_hub_guide_wifi"
        android:contentDescription="@string/add_hub_guide_image_content_description"
        android:layout_marginTop="44dp"
        android:layout_marginHorizontal="44dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_hub_place_guide_tooltip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_hub_place_guide_next"
        style="@style/Theme.ElderCare.Button.Capsule.Base"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_text_next"
        android:textAppearance="@style/TextAppearance.SubTitle5"
        android:backgroundTint="@color/primary"
        android:layout_marginHorizontal="@dimen/spacing4"
        android:layout_marginBottom="@dimen/spacing4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
