<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_add_hub_guide_second_title"
        style="@style/TextAppearance.Title1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="@dimen/spacing4"
        android:text="@string/add_hub_guide_second"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/tv_add_hub_guide_second_guide_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_hub_guide_image_content_description"
        android:layout_marginTop="78dp"
        android:layout_marginHorizontal="44dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_hub_guide_second_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_hub_guide_second_guide_next"
        style="@style/Theme.ElderCare.Button.Capsule.Base"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_download"
        android:textAppearance="@style/TextAppearance.SubTitle5"
        android:backgroundTint="@color/primary"
        android:layout_marginHorizontal="@dimen/spacing4"
        android:layout_marginBottom="@dimen/spacing4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
